tests/sksl/errors/Ossfuzz40428.glsl
### Compilation failed:

error: 1: value is out of range for type 'int': 2147483649
int x[~2147483649];
       ^^^^^^^^^^
error: 1: array size must be positive
int x[~2147483649];
      ^^^^^^^^^^^
2 errors
